contrast colors fixed

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
     border: 0;
     font-size: 1em;
     border-radius: 3px;
-    background: #99999B;
+    background: #737373;
     color: #fff;
   }
   
@@ -55,11 +55,11 @@
   
   .equals {
     width: 133px;
-    background-color: #f49242;
+    background-color: #9494FF;
   }
 
   #minus, #plus, #divide, #multiply, #square {
-      background-color: #42d4f4;
+      background-color: #0000FF;
   }
 
   #title {
